--- a/matrix-stats/v2.3.0-roadmap.md
+++ b/matrix-stats/v2.3.0-roadmap.md
@@ -212,7 +212,7 @@ BigDecimal getT(int numberOfDecimals = -1) {
 **Priority**: HIGH
 **Estimated Impact**: Core functionality for statistical testing capabilities
 
-**Status**: 30/32 classes implemented (94%), 2 classes remaining + 1 numerical accuracy improvement
+**Status**: 31/32 classes implemented (97%), 1 class remaining + 1 numerical accuracy improvement
 
 ### 3.1 Implementation Gap Analysis
 
@@ -221,8 +221,8 @@ BigDecimal getT(int numberOfDecimals = -1) {
 | **contingency** | 6             | 6           | 0       | 0    | 100%     |
 | **normality**   | 8             | 8           | 0       | 0    | 100%     |
 | **timeseries**  | 12            | 12          | 0       | 0    | 100%     |
-| **regression**  | 6             | 4           | 0       | 2    | 67%      |
-| **TOTAL**       | 32            | 30          | 0       | 2    | 94%      |
+| **regression**  | 6             | 5           | 0       | 1    | 83%      |
+| **TOTAL**       | 32            | 31          | 0       | 1    | 97%      |
 
 ### 3.2 Implementation Priority
 
@@ -279,8 +279,8 @@ BigDecimal getT(int numberOfDecimals = -1) {
 26. ✅ **Johansen Test** (timeseries) - Cointegration test for I(1) time series (15 tests)
 27. ✅ **CCM Test** (timeseries) - Convergent cross mapping for nonlinear causality (19 tests)
 
-**Phase 3d: Remaining Classes** (2 regression classes)
-28. **DecisionTree** (regression) - Tree-based regression model
+**Phase 3d: Remaining Classes** (1 regression class remaining)
+28. ✅ **DecisionTree** (regression) - CART algorithm for single-feature regression (591 lines, 29 tests)
 29. **SimpleRegression** or other regression class - Additional regression functionality
 
 ### 3.3 Numerical Accuracy Improvement
@@ -356,26 +356,26 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 - ✅ ShapiroWilk - IMPLEMENTED (260 lines, Phase 3a)
 
 **TIMESERIES PACKAGE** (12 classes):
-- ❌ Adf - STUB (Augmented Dickey-Fuller)
-- ❌ AdfGls - STUB (ADF-GLS)
-- ❌ Ccm - STUB (Convergent Cross Mapping)
-- ❌ Chow - STUB (Chow test)
-- ❌ Df - STUB (Dickey-Fuller)
-- ❌ DurbinWatson - STUB
-- ❌ Granger - STUB (Granger causality)
-- ❌ Johansen - STUB (Johansen test)
-- ❌ Kpss - STUB (KPSS test)
-- ⚠️ Portmanteau - PARTIAL (ljungBox() returns null)
-- ❌ TurningPoint - STUB
-- ❌ UnitRoot - STUB
+- ✅ Adf - IMPLEMENTED (314 lines, 12 tests)
+- ✅ AdfGls - IMPLEMENTED (474 lines, 19 tests)
+- ✅ Ccm - IMPLEMENTED (399 lines, 19 tests)
+- ✅ Chow - IMPLEMENTED (329 lines, 16 tests)
+- ✅ Df - IMPLEMENTED (393 lines, 16 tests)
+- ✅ DurbinWatson - IMPLEMENTED (170 lines, 11 tests)
+- ✅ Granger - IMPLEMENTED (366 lines, 15 tests)
+- ✅ Johansen - IMPLEMENTED (300 lines, 15 tests)
+- ✅ Kpss - IMPLEMENTED (243 lines, 12 tests)
+- ✅ Portmanteau - IMPLEMENTED (244 lines, 16 tests)
+- ✅ TurningPoint - IMPLEMENTED (193 lines, 21 tests)
+- ✅ UnitRoot - IMPLEMENTED (289 lines, 20 tests)
 
 **REGRESSION PACKAGE** (6 classes):
 - ✅ LinearRegression - IMPLEMENTED (has tests)
 - ✅ PolynomialRegression - IMPLEMENTED (has tests)
 - ✅ QuantileRegression - IMPLEMENTED (has tests)
 - ✅ RegressionUtils - IMPLEMENTED (utility methods)
-- ❌ LogisticRegression - STUB (empty)
-- ❌ DecisionTree - STUB (comment: "Not yet implemented")
+- ✅ LogisticRegression - IMPLEMENTED (334 lines, 12 tests)
+- ✅ DecisionTree - IMPLEMENTED (591 lines, 29 tests) - CART algorithm for single-feature regression
 
 ---
 
@@ -537,7 +537,7 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 - [x] 3b.4 Implement Augmented Dickey-Fuller Test (timeseries) - 314 lines, 12 tests passing
 - [x] 3b.5 Implement Logistic Regression (regression) - 334 lines, 12 tests passing
 
-**Phase 3c: Lower-Priority Implementations** (15/16 completed)
+**Phase 3c: Lower-Priority Implementations** ✅ **COMPLETED** (17/17)
 - [x] KPSS Test (timeseries) - 243 lines, 12 tests passing
 - [x] Ljung-Box Test (timeseries) - Complete Portmanteau class - 244 lines, 16 tests passing
 - [x] Cramér-von Mises Test (normality) - 254 lines, 18 tests passing
@@ -553,10 +553,11 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 - [x] Granger Causality Test (timeseries) - 366 lines, 15 tests passing
 - [x] Turning Point Test (timeseries) - 193 lines, 21 tests passing
 - [x] UnitRoot Test (timeseries) - 289 lines, 20 tests passing
-- [ ] Remaining timeseries tests: Ccm, Johansen
-- [ ] Remaining regression: DecisionTree
+- [x] Ccm (Convergent Cross Mapping) - 399 lines, 19 tests
+- [x] Johansen (Cointegration Test) - 300 lines, 15 tests
 
-**Phase 3d: Numerical Accuracy** 🔴
+**Phase 3d: Remaining & Numerical Accuracy** 🟡
+- [x] DecisionTree (regression) - IMPLEMENTED (591 lines, 29 tests)
 - [ ] 3d.1 Refine SpecialFunctions.regularizedIncompleteBeta() algorithm
   - [ ] Review continued fraction convergence (lines 53-87)
   - [ ] Compare with Apache Commons Math `RegularizedBeta.value()`
@@ -590,7 +591,7 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 - [x] 4c.7 Create PortmanteauTest.groovy (16 tests)
 - [x] 4c.8 Create CramerVonMisesTest.groovy (18 tests)
 - [x] 4c.9 Create ShapiroFranciaTest.groovy (22 tests)
-- [ ] 4c.10 Create DecisionTreeTest.groovy (when implemented)
+- [x] 4c.10 Create DecisionTreeTest.groovy (29 tests)
 
 **Overall Progress**:
 - Test files: 14 → 27 (+93%) after Phase 3b+3c
@@ -672,4 +673,5 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 | 2026-01-21 | Claude Code Agent | 2.3.0-SNAPSHOT | **Johansen Cointegration Test Implementation** ✅: Implemented Johansen (1991) test for cointegration in I(1) time series (300 lines, 15 tests). Uses Vector Error Correction Model (VECM) approach: regresses ΔY_t and Y_{t-1} on short-run dynamics (lagged differences + deterministic terms), computes moment matrices (S00, S11, S01), solves generalized eigenvalue problem via S11^{-1}S01'S00^{-1}S01. Calculates trace statistics: -T * Σ ln(1 - λ_i). Supports 'none', 'const', 'trend' specifications with Osterwald-Lenum (1992) critical values. Fixed matrix singularity issues by using projection matrix approach for residual computation. All tests passing. Phase 3c: 16/17 complete. **Timeseries package: 11/12 classes (92%)**, Overall: 28/32 classes (87.5%). |
 | 2026-01-21 | Claude Code Agent | 2.3.0-SNAPSHOT | **CCM Test Implementation & Timeseries Package Complete** ✅: Implemented Convergent Cross Mapping (399 lines, 19 tests) based on Sugihara et al. (2012) for detecting causality in nonlinear dynamical systems. Uses Takens' theorem for state space reconstruction via time-delay embedding, simplex projection with E+1 nearest neighbors for prediction, and Pearson correlation to measure cross-map skill. Tests bidirectional causality by cross-mapping X from Y's manifold and vice versa. Convergence of cross-map skill with increasing library size indicates causal influence. Supports configurable embedding dimension E, time lag tau, and multiple library sizes. Fixed library size validation logic (maxValidLib = n - (E-1)*tau). All tests passing. **Phase 3c COMPLETED (14/14 statistical tests)**. **Timeseries package: 12/12 classes (100%)**, Overall: 29/32 classes (91%). |
 | 2026-01-21 | Claude Code Agent | 2.3.0-SNAPSHOT | **Fisher's Exact Test Suite & Contingency Package Complete** ✅: Created comprehensive test suite for Fisher's Exact Test (29 tests). Implementation was already complete (225 lines) using HypergeometricDistribution for exact p-value calculation. Tests cover two-sided and one-sided alternatives, odds ratio calculation with Haldane-Anscombe correction for zero cells, confidence intervals, Matrix and List inputs, validation, edge cases (zero cells, symmetric tables, extreme tables), and comparison with expected values. All tests passing. **Phase 3a COMPLETED**. **Contingency package: 6/6 classes (100%)**, Overall: 30/32 classes (94%). |
+| 2026-01-21 | Claude Code Agent | 2.3.0-SNAPSHOT | **DecisionTree Implementation Complete** ✅: Implemented CART (Classification and Regression Trees) algorithm for single-feature regression (591 lines, 29 tests). Uses variance reduction (MSE minimization) as splitting criterion. Features include: binary tree with configurable maxDepth and minSamplesLeaf, prediction at leaf nodes via mean of training samples, comprehensive metrics (R², MSE, RMSE, MAE), tree structure info (depth, leaf count), detailed summary() with tree rules. Supports both List and Matrix-based construction. All tests passing including step function perfect fit, linear approximation, constant Y, edge cases, validation, and extrapolation. **Regression package: 5/6 classes (83%)**, Overall: 31/32 classes (97%). |
 
